// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create SSH Cred Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="secret-ssh"
        >
          <svg
            height="37"
            viewBox="0 0 89 73"
            width="37"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              transform="translate(-1 -1)"
            >
              <path
                d="M86 0H5a5 5 0 00-5 5v65a5 5 0 005 5h81a5 5 0 005-5V5a5 5 0 00-5-5z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M5 2h81a3 3 0 013 3v65a3 3 0 01-3 3H5a3 3 0 01-3-3V5a3 3 0 013-3z"
                fill="#FFE981"
                fill-rule="nonzero"
              />
              <path
                d="M69.5 16.5v2H.5v-2zm16.5 0v2H74v-2zM7 6a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M16.2 52.8c.633 0 1.167-.217 1.6-.65l8.4-8.4c.067-.067.1-.117.1-.15.167-.167.3-.383.4-.65.1-.267.15-.517.15-.75v-.05c0-.333-.067-.633-.2-.9-.133-.3-.283-.517-.45-.65l-8.4-8.4c-.2-.2-.442-.35-.725-.45a3.922 3.922 0 00-.875-.2c-.567-.033-1.083.183-1.55.65-.233.2-.408.45-.525.75a2.34 2.34 0 00-.175.85c0 .6.233 1.133.7 1.6l4.75 4.75c.567.567.85 1.242.85 2.025 0 .783-.283 1.458-.85 2.025l-.975.975c-.317.317-.642.625-.975.925-.467.467-.933.942-1.4 1.425-.467.483-.933.958-1.4 1.425-.4.4-.633.933-.7 1.6 0 .3.067.583.2.85s.3.517.5.75c.167.2.4.358.7.475.3.117.583.175.85.175z"
                fill="#22272D"
                fill-rule="nonzero"
              />
              <rect
                fill="#1C1C28"
                height="3"
                rx="1.5"
                width="40"
                x="28"
                y="50"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        SSH Credential
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          SSH Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="height: 500px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          SSH Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formData"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                  >
                    <div
                      class="StyledProps--font StyledProps--main connectorFormNameElm"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            ID
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                />
                              </div>
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main"
                            icon="edit"
                            style="vertical-align: middle;"
                          >
                            <svg
                              data-icon="edit"
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            Name
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                      style="justify-content: center;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                      >
                        + Description
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                      >
                        + Tags
                      </p>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main connectorFormElm"
                  >
                    
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create SSH Cred Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="secret-ssh"
        >
          <svg
            height="37"
            viewBox="0 0 89 73"
            width="37"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              transform="translate(-1 -1)"
            >
              <path
                d="M86 0H5a5 5 0 00-5 5v65a5 5 0 005 5h81a5 5 0 005-5V5a5 5 0 00-5-5z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M5 2h81a3 3 0 013 3v65a3 3 0 01-3 3H5a3 3 0 01-3-3V5a3 3 0 013-3z"
                fill="#FFE981"
                fill-rule="nonzero"
              />
              <path
                d="M69.5 16.5v2H.5v-2zm16.5 0v2H74v-2zM7 6a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M16.2 52.8c.633 0 1.167-.217 1.6-.65l8.4-8.4c.067-.067.1-.117.1-.15.167-.167.3-.383.4-.65.1-.267.15-.517.15-.75v-.05c0-.333-.067-.633-.2-.9-.133-.3-.283-.517-.45-.65l-8.4-8.4c-.2-.2-.442-.35-.725-.45a3.922 3.922 0 00-.875-.2c-.567-.033-1.083.183-1.55.65-.233.2-.408.45-.525.75a2.34 2.34 0 00-.175.85c0 .6.233 1.133.7 1.6l4.75 4.75c.567.567.85 1.242.85 2.025 0 .783-.283 1.458-.85 2.025l-.975.975c-.317.317-.642.625-.975.925-.467.467-.933.942-1.4 1.425-.467.483-.933.958-1.4 1.425-.4.4-.633.933-.7 1.6 0 .3.067.583.2.85s.3.517.5.75c.167.2.4.358.7.475.3.117.583.175.85.175z"
                fill="#22272D"
                fill-rule="nonzero"
              />
              <rect
                fill="#1C1C28"
                height="3"
                rx="1.5"
                width="40"
                x="28"
                y="50"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        SSH Credential
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          SSH Details
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="min-height: 500px; width: 350px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          Configuration and Authentication
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="authScheme-0"
              >
                <label
                  class="bp3-label"
                  for="authScheme"
                >
                  What would you like to configure?
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="authScheme"
                        type="radio"
                        value="SSH"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      SSH Key
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="authScheme"
                        type="radio"
                        value="Kerberos"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Kerberos
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="flex: 1; display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--padding-right-xsmall"
                    icon="lock"
                  >
                    <svg
                      data-icon="lock"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        lock
                      </desc>
                      <path
                        d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  Authentication
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <button
                        class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--inline StyledProps--font-small"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Username/SSH Key
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="userName-1"
              >
                <label
                  class="bp3-label"
                  for="userName"
                >
                  Username
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="userName"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Select or create a SSH Key File
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="key"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            Create or Select a Secret
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-3"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Passphrase (optional)
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="encryptedPassphrase"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            Create or Select a Secret
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="port-4"
              >
                <label
                  class="bp3-label"
                  for="port"
                >
                  SSH Port
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="port"
                      type="text"
                      value="22"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create SSH Cred Wizard should render form 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="secret-ssh"
        >
          <svg
            height="37"
            viewBox="0 0 89 73"
            width="37"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              transform="translate(-1 -1)"
            >
              <path
                d="M86 0H5a5 5 0 00-5 5v65a5 5 0 005 5h81a5 5 0 005-5V5a5 5 0 00-5-5z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M5 2h81a3 3 0 013 3v65a3 3 0 01-3 3H5a3 3 0 01-3-3V5a3 3 0 013-3z"
                fill="#FFE981"
                fill-rule="nonzero"
              />
              <path
                d="M69.5 16.5v2H.5v-2zm16.5 0v2H74v-2zM7 6a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1zm6 0a1 1 0 011 1v5a1 1 0 01-2 0V7a1 1 0 011-1z"
                fill="#1C1C28"
                fill-rule="nonzero"
              />
              <path
                d="M16.2 52.8c.633 0 1.167-.217 1.6-.65l8.4-8.4c.067-.067.1-.117.1-.15.167-.167.3-.383.4-.65.1-.267.15-.517.15-.75v-.05c0-.333-.067-.633-.2-.9-.133-.3-.283-.517-.45-.65l-8.4-8.4c-.2-.2-.442-.35-.725-.45a3.922 3.922 0 00-.875-.2c-.567-.033-1.083.183-1.55.65-.233.2-.408.45-.525.75a2.34 2.34 0 00-.175.85c0 .6.233 1.133.7 1.6l4.75 4.75c.567.567.85 1.242.85 2.025 0 .783-.283 1.458-.85 2.025l-.975.975c-.317.317-.642.625-.975.925-.467.467-.933.942-1.4 1.425-.467.483-.933.958-1.4 1.425-.4.4-.633.933-.7 1.6 0 .3.067.583.2.85s.3.517.5.75c.167.2.4.358.7.475.3.117.583.175.85.175z"
                fill="#22272D"
                fill-rule="nonzero"
              />
              <rect
                fill="#1C1C28"
                height="3"
                rx="1.5"
                width="40"
                x="28"
                y="50"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        SSH Credential
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          SSH Details
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="height: 500px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          Verify Connection
        </p>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--margin-top-medium"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
